--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11",
     "framer-motion": "^5",
     "next": "12.0.8",
+    "next-seo": "^4.29.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
