--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "next": "12.0.8",
     "next-seo": "^4.29.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "speakingurl": "^14.0.1"
   },
   "devDependencies": {
     "@types/node": "17.0.12",
     "@types/react": "17.0.38",
+    "@types/speakingurl": "^13.0.3",
     "eslint": "8.7.0",
     "eslint-config-next": "12.0.8",
     "typescript": "4.5.5"
