--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "commit": "git-cz"
   },
   "dependencies": {
     "@chakra-ui/icons": "^1.1.1",
@@ -25,6 +26,12 @@
     "@types/speakingurl": "^13.0.3",
     "eslint": "8.7.0",
     "eslint-config-next": "12.0.8",
+    "git-cz": "4.8.0",
     "typescript": "4.5.5"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/git-cz"
+    }
   }
 }
