refactor: 💡 Move next app into `packages`

--- a/package.json
+++ b/package.json
@@ -1,37 +1,15 @@
 {
   "name": "grepmeet-talks-manager",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "commit": "git-cz"
-  },
-  "dependencies": {
-    "@chakra-ui/icons": "^1.1.1",
-    "@chakra-ui/react": "^1.8.0",
-    "@emotion/react": "^11",
-    "@emotion/styled": "^11",
-    "framer-motion": "^5",
-    "next": "12.0.8",
-    "next-seo": "^4.29.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "speakingurl": "^14.0.1"
-  },
-  "devDependencies": {
-    "@types/node": "17.0.12",
-    "@types/react": "17.0.38",
-    "@types/speakingurl": "^13.0.3",
-    "eslint": "8.7.0",
-    "eslint-config-next": "12.0.8",
-    "git-cz": "4.8.0",
-    "typescript": "4.5.5"
-  },
-  "config": {
-    "commitizen": {
-      "path": "./node_modules/git-cz"
-    }
-  }
+  "version": "1.0.0",
+  "description": "grepmeet.org help communities to auto-organize talks selected by there members.",
+  "repository": "git@github.com:grepmeet/grepmeet-talks-manager.git",
+  "contributors": [
+    "Quentin Machard <quentin.machard@gmail.com>",
+    "Anas Ameziane <anas.ameziane@gmail.com>"
+  ],
+  "workspaces": [
+    "packages/*"
+  ],
+  "license": "MIT",
+  "private": true
 }
