--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "grepmeet-talks-manager",
+  "private": true,
   "version": "1.0.0",
   "description": "grepmeet.org help communities to auto-organize talks selected by there members.",
   "repository": "git@github.com:grepmeet/grepmeet-talks-manager.git",
@@ -7,9 +8,18 @@
     "Quentin Machard <quentin.machard@gmail.com>",
     "Anas Ameziane <anas.ameziane@gmail.com>"
   ],
+  "scripts": {
+    "packages:build": "yarn workspaces foreach -ptv run build",
+    "packages:lint": "yarn workspaces foreach -ptv run lint",
+    "commit": "git-cz"
+  },
   "workspaces": [
     "packages/*"
   ],
-  "license": "MIT",
-  "private": true
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/git-cz"
+    }
+  },
+  "license": "MIT"
 }
