--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,17 @@
 /.pnp
 .pnp.js
 
+# Yarn
+.pnp.*
+.yarn/*
+# !.yarn/cache <-- To opt-in for Zero-Install (https://yarnpkg.com/getting-started/qa#which-files-should-be-gitignored, https://yarnpkg.com/features/zero-installs)
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
+.yarn-integrity
+
 # testing
 /coverage
 
