--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -5,7 +5,7 @@
   "types": "dist/src/types",
   "scripts": {
     "build": "tsc",
-    "lint": "eslint src/*.ts",
+    "lint": "eslint src/**/*.ts",
     "clean": "rm -r dist/*"
   },
   "devDependencies": {
