🗃️ Configure prisma and first models

--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,5 @@
 ###> Next.js ###
 NEXT_PUBLIC_BASE_URL=http://localhost:3000
 ###< Next.js ###
+
+DATABASE_URL="postgresql://grepmeet:grepmeet@localhost:5432/grepmeet?schema=public"
