--- a/package.json
+++ b/package.json
@@ -9,25 +9,26 @@
     "commit": "git-cz"
   },
   "dependencies": {
-    "@chakra-ui/icons": "^1.1.1",
-    "@chakra-ui/react": "^1.8.0",
-    "@emotion/react": "^11",
-    "@emotion/styled": "^11",
-    "framer-motion": "^5",
-    "next": "12.0.8",
-    "next-seo": "^4.29.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "@chakra-ui/icons": "^2.1.1",
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "framer-motion": "^11.0.6",
+    "next": "14.1.0",
+    "next-seo": "^6.5.0",
+    "react": "^18",
+    "react-dom": "^18",
     "speakingurl": "^14.0.1"
   },
   "devDependencies": {
-    "@types/node": "17.0.12",
-    "@types/react": "17.0.38",
-    "@types/speakingurl": "^13.0.3",
-    "eslint": "8.7.0",
-    "eslint-config-next": "12.0.8",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "@types/speakingurl": "^13.0.6",
+    "eslint": "^8",
+    "eslint-config-next": "14.1.0",
     "git-cz": "4.8.0",
-    "typescript": "4.5.5"
+    "typescript": "^5"
   },
   "config": {
     "commitizen": {
