--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@prisma/client": "^5.10.2",
     "framer-motion": "^11.0.6",
     "next": "14.1.0",
     "next-seo": "^6.5.0",
