--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@prisma/client": "^5.10.2",
+    "babel-plugin-superjson-next": "^0.4.5",
     "framer-motion": "^11.0.6",
     "next": "14.1.0",
     "next-seo": "^6.5.0",
