--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "commit": "git-cz"
+    "commit": "git-cz",
+    "migrate:dev": "prisma migrate dev",
+    "seed": "prisma db seed"
   },
   "dependencies": {
     "@chakra-ui/icons": "^2.1.1",
@@ -23,7 +25,7 @@
     "speakingurl": "^14.0.1"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@types/node": "^20.11.20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/speakingurl": "^13.0.6",
@@ -31,7 +33,8 @@
     "eslint-config-next": "14.1.0",
     "git-cz": "4.8.0",
     "prisma": "^5.10.2",
-    "typescript": "^5"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   },
   "config": {
     "commitizen": {
@@ -40,5 +43,8 @@
   },
   "engines": {
     "node": "18"
+  },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   }
 }
